rust/windows_module/errors_5.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error[E0432]: unresolved import `dynasm::DynasmApi`
  --> windows_module/src/jit/windows_compiler.rs:11:22
   |
11 | ...m, DynasmApi};
   |       ^^^^^^^^^ no `DynasmApi` in the root

error[E0433]: failed to resolve: could not find `x64` in `dynasm`
   --> windows_module/src/jit/windows_compiler.rs:134:31
    |
134 | ...asm::x64::Assemb...
    |         ^^^ could not find `x64` in `dynasm`

error[E0425]: cannot find type `Error` in crate `dynasm`
   --> windows_module/src/jit/windows_compiler.rs:134:73
    |
134 | ...asm::Error| JitE...
    |         ^^^^^ not found in `dynasm`
    |
help: consider importing one of these items
    |
  3 + use std::error::Error;
    |
  3 + use std::fmt::Error;
    |
  3 + use std::io::Error;
    |
  3 + use core::error::Error;
    |
    = and 13 other candidates
help: if you import `Error`, refer to it directly
    |
134 -         let mut ops = dynasm::x64::Assembler::new().map_err(|e: dynasm::Error| JitError::CompilationError(e.to_string()))?;
134 +         let mut ops = dynasm::x64::Assembler::new().map_err(|e: Error| JitError::CompilationError(e.to_string()))?;
    |

warning: found module declaration for main.rs
 --> windows_module/src/lib.rs:3:1
  |
3 | pub mod main;
  | ^^^^^^^^^^^^^
  |
  = note: a binary crate cannot be used as library
  = note: `#[warn(special_module_name)]` on by default

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `windows_module` (lib) generated 1 warning
error: could not compile `windows_module` (lib) due to 3 previous errors; 1 warning emitted
